--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./assets/css/styles.css">
-  <link rel="stylesheet" href="./assets/css/resass.css">
+  <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="stylesheet" href="assets/css/resass.css">
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/FIRSTTech_IconVert_RGB.png" />
 </head>
 
@@ -274,7 +274,7 @@
     <div class="container">
       <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 pb-5 border-bottom">
         <div class="col mb-3">
-          <a><img src="/assets/images/redlight-logo.png" alt="" class="img-fluid d-block mx-auto" style="max-height: 70px;"></a>
+          <a><img src="assets/images/redlight-logo.png" alt="" class="img-fluid d-block mx-auto" style="max-height: 70px;"></a>
         </div>
         <div class="col mb-3">
         </div>
@@ -315,7 +315,7 @@
       duration: 800,
     });
   </script>
-  <script src="/scripts/script.js"></script>
+  <script src="scripts/script.js"></script>
 </body>
 
 </html>
