--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="navbar navbar-expand-lg fixed-top" style="z-index: 9999; transition: 0.5s;">
     <div class="container py-3">
       <a class="navbar-brand" href="#">
-        <img src="assets/images/redlight-logo.png" alt="" width="150" height="50" class="d-inline-block align-text-top">
+        <img src="assets/images/ftcvn-logo.png" alt="" width="150" height="50" class="d-inline-block align-text-top">
       </a>
       <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="bi bi-list fs-1" style="color: #ff8100;"></span>
@@ -132,7 +132,7 @@
           </div>
         </div>
         <div class="col-12 col-lg-6 align-content-center">
-          <img class="img-fluid p-5" src="/assets/images/520x427-1-home.png" alt="">
+          <img class="img-fluid p-5" src="assets/images/520x427-1-home.png" alt="">
         </div>
       </div>
   </section>
@@ -283,7 +283,7 @@
     <div class="container">
       <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 pb-5 border-bottom">
         <div class="col mb-3">
-          <a><img src="assets/images/redlight-logo.png" alt="" class="img-fluid d-block mx-auto" style="max-height: 70px;"></a>
+          <a><img src="assets/images/ftc-vn.png" alt="" class="img-fluid d-block mx-auto" style="max-height: 70px;"></a>
         </div>
         <div class="col mb-3">
         </div>
