fix: footer image

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
     <div class="container">
       <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 pb-5 border-bottom">
         <div class="col mb-3">
-          <a><img src="assets/images/ftc-vn.png" alt="" class="img-fluid d-block mx-auto" style="max-height: 70px;"></a>
+          <a><img src="assets/images/ftcvn-logo.png" alt="" class="img-fluid d-block mx-auto" style="max-height: 70px;"></a>
         </div>
         <div class="col mb-3">
         </div>
