--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           </p>
         </div>
         <div class="col-12 col-lg-6 align-content-center">
-          <img class="img-fluid p-5" src="/assets/images/585x660-1.png" alt="">
+          <img class="img-fluid p-5" src="assets/images/robot-1.png" alt="">
         </div>
       </div>
     </div>
