--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
   </section>
 
   <!-- Footer section -->
-  <svg id="wave" style="transform:rotate(0deg); transition: 0.3s" viewBox="0 0 1440 120" version="1.1" xmlns="http://www.w3.org/2000/svg">
+  <svg id="wave" style="transform:rotate(0deg); transition: 0.3s; margin-bottom: -3px;" viewBox="0 0 1440 120" version="1.1" xmlns="http://www.w3.org/2000/svg">
     <defs>
       <linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0">
         <stop stop-color="rgba(2, 90, 170, 1)" offset="0%"></stop>
