fix: import media and files

--- a/en/index.html
+++ b/en/index.html
@@ -10,9 +10,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/assets/css/styles.css">
-  <link rel="stylesheet" href="/assets/css/resass.css">
-  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/FIRSTTech_IconVert_RGB.png" />
+  <link rel="stylesheet" href="../assets/css/styles.css">
+  <link rel="stylesheet" href="../assets/css/resass.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="../assets/favicons/FIRSTTech_IconVert_RGB.png" />
   <meta name="description" content=" FIRST Tech Challenge Việt Nam là giải đấu FTC chính thức lần đầu tiên được tổ chức tại Việt Nam theo bản quyền của FIRST tại Hoa Kỳ. FIRST Tech Challenge Việt Nam mong muốn tạo ra một sân chơi về công nghệ nhằm khuyến khích tinh thần học tập, sáng tạo, mối quan tâm về xã hội của học sinh Việt Nam, đồng thời truyền cảm hứng và thúc đẩy học sinh học tập, thực hành, ứng dụng các công nghệ mới, góp phần xây dựng nguồn lực chất lượng cao, đáp ứng nhu cầu của cuộc cách mạng công nghiệp 4.0.">
 </head>
 
@@ -22,7 +22,7 @@
   <div class="navbar navbar-expand-lg fixed-top" style="z-index: 9999; transition: 0.5s;">
     <div class="container py-3">
       <a class="navbar-brand" href="#">
-        <img src="/assets/images/ftcvn-logo.png" alt="" width="150" height="50" class="d-inline-block align-text-top">
+        <img src="../assets/images/ftcvn-logo.png" alt="" width="150" height="50" class="d-inline-block align-text-top">
       </a>
       <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="bi bi-list fs-1" style="color: #ff8100;"></span>
@@ -132,7 +132,7 @@
           </div>
         </div>
         <div class="col-12 col-lg-6 align-content-center">
-          <img class="img-fluid p-5" src="/assets/images/hero-image.png" alt="">
+          <img class="img-fluid p-5" src="../assets/images/hero-image.png" alt="">
         </div>
       </div>
   </section>
@@ -165,7 +165,7 @@
           </p>
         </div>
         <div class="col-12 col-lg-6 align-content-center">
-          <img class="img-fluid p-5" src="/assets/images/robot-1.png" alt="">
+          <img class="img-fluid p-5" src="../assets/images/robot-1.png" alt="">
         </div>
       </div>
     </div>
@@ -283,7 +283,7 @@
     <div class="container">
       <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 pb-5 border-bottom">
         <div class="col mb-3">
-          <a><img src="/assets/images/ftcvn-logo.png" alt="" class="img-fluid d-block mx-auto" style="max-height: 70px;"></a>
+          <a><img src="../assets/images/ftcvn-logo.png" alt="" class="img-fluid d-block mx-auto" style="max-height: 70px;"></a>
         </div>
         <div class="col mb-3">
         </div>
@@ -324,7 +324,7 @@
       duration: 800,
     });
   </script>
-  <script src="/scripts/script.js"></script>
+  <script src="../scripts/script.js"></script>
 </body>
 
 </html>
