--- a/en/index.html
+++ b/en/index.html
@@ -152,7 +152,7 @@
       <div class="row w-100 mx-auto">
         <div class="col-12 col-lg-6 align-content-center">
           <h1 class="fw-semibold fs-1 mb-3">
-            <span class="fw-bold" style="color: #025aaa;"><span class="fw-bolder fst-italic">FIRST®</span> Tech Challenge</span> là gì?
+            What is <span class="fw-bold" style="color: #025aaa;"><span class="fw-bolder fst-italic">FIRST®</span> Tech Challenge?</span>
           </h1>
           <p class="fs-5">
             <span class="fw-bold">FIRST Tech Challenge</span> is more than just building robots. Teams (up to 15 team members, grades 7-12) participate in the challenge to design, build, program, and operate robots to compete in leagues. The robot kits are reusable from year to year and can be programmed in various levels of the Java language. In addition to designing and building robots, teams also participate in fundraising, branding, communications, and community outreach to win various prizes.
