--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/7.2.3/css/flag-icons.min.css" integrity="sha512-bZBu2H0+FGFz/stDN/L0k8J0G8qVsAL0ht1qg5kTwtAheiXwiRKyCq1frwfbSFSJN3jooR5kauE0YjtPzhZtJQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="stylesheet" href="assets/css/resass.css">
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/FIRSTTech_IconVert_RGB.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/FIRSTTech_IconVert_RGB.png">
   <meta name="description" content=" FIRST Tech Challenge Việt Nam là giải đấu FTC chính thức lần đầu tiên được tổ chức tại Việt Nam theo bản quyền của FIRST tại Hoa Kỳ. FIRST Tech Challenge Việt Nam mong muốn tạo ra một sân chơi về công nghệ nhằm khuyến khích tinh thần học tập, sáng tạo, mối quan tâm về xã hội của học sinh Việt Nam, đồng thời truyền cảm hứng và thúc đẩy học sinh học tập, thực hành, ứng dụng các công nghệ mới, góp phần xây dựng nguồn lực chất lượng cao, đáp ứng nhu cầu của cuộc cách mạng công nghiệp 4.0.">
 </head>
 
@@ -24,11 +25,26 @@
       <a class="navbar-brand" href="#">
         <img src="assets/images/ftcvn-logo.png" alt="" width="150" height="50" class="d-inline-block align-text-top">
       </a>
-      <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="bi bi-list fs-1" style="color: #ff8100;"></span>
+      <button class="navbar-toggler border-0" type="button">
+        <style>
+          #language-selector .dropdown-toggle::after {
+            content: none;
+          }
+        </style>
+        <div class="nav-item d-inline-block px-2" style="position: initial;">
+          <a class="nav-link text-decoration-none border-0 shadow-none" id="language-selector" onclick="switchWebLanguage()">
+            <span class="fi fi-vn"></span>
+          </a>
+        </div>
+        <span class="bi bi-list fs-1" style="color: #ff8100;" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"></span>
       </button>
       <div class="collapse navbar-collapse flex-grow-0" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item d-none d-lg-block">
+            <a class="nav-link text-decoration-none border-0 shadow-none" id="language-selector-main" onclick="switchWebLanguage()">
+              <span class="fi fi-vn"></span>
+            </a>
+          </li>
           <li class="nav-item">
             <a class="nav-link active border-0 shadow-none text-white" aria-current="page" href="/">Home</a>
           </li>
@@ -45,7 +61,7 @@
             <a class="nav-link dropdown-toggle border-0 shadow-none" style="outline: none; box-shadow: none; color: white;" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Xem thêm
             </a>
-            <div class="dropdown-menu w-100 rounded-0 border-0 p-0" style="background-color: #ff8100;">
+            <div class="dropdown-menu big-menu w-100 rounded-0 border-0 p-0" style="background-color: #ff8100;">
               <div class="container pt-4 pb-3">
                 <div class="row row-gap-3">
                   <div class="col-12 col-lg-4">
@@ -320,10 +336,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script type="text/javascript">
-    var userLang = navigator.language || navigator.userLanguage; 
-    if (userLang !== 'vi') {
-      window.location.href = 'en';
-    }
     AOS.init({
       duration: 800,
     });
