--- a/en/index.html
+++ b/en/index.html
@@ -33,7 +33,7 @@
         </style>
         <div class="nav-item d-inline-block px-2" style="position: initial;">
           <a class="nav-link text-decoration-none border-0 shadow-none" id="language-selector" onclick="switchWebLanguage()">
-            <span class="fi fi-vn"></span>
+            <span class="fi fi-us"></span>
           </a>
         </div>
         <span class="bi bi-list fs-1" style="color: #ff8100;" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"></span>
