--- a/en/index.html
+++ b/en/index.html
@@ -61,7 +61,7 @@
             <a class="nav-link dropdown-toggle border-0 shadow-none" style="outline: none; box-shadow: none; color: white;" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               More
             </a>
-            <div class="dropdown-menu w-100 rounded-0 border-0 p-0" style="background-color: #ff8100;">
+            <div class="dropdown-menu big-menu w-100 rounded-0 border-0 p-0" style="background-color: #ff8100;">
               <div class="container pt-4 pb-3">
                 <div class="row row-gap-3">
                   <div class="col-12 col-lg-4">
