--- a/en/index.html
+++ b/en/index.html
@@ -195,7 +195,7 @@
       </div>
       <div class="col-lg-7 col-12 mx-auto text-center text-lg-start mt-3 mt-lg-0">
         <h4 class="text-white fs-4">2024-2025 Seasn theme: INTO THE DEEP<sup>SM</sup> by RTX</h4>
-        <p class="text-white fs-5">In the <span class="fw-semibold">INTO THE DEEP</span> season, sponsored by Raytheon Technologies (RTX), the FIRST Tech Challenge will unveil the power of design, creativity, and precision to create countless new experiences.</p>
+        <p class="text-white fs-5">In the <span class="fw-semibold">INTO THE DEEP</span> season, presented by Raytheon Technologies (RTX), the FIRST Tech Challenge will unveil the power of design, creativity, and precision to create countless new experiences.</p>
         <a class="btn bg-white p-3 text-primary fw-semibold">Explore</a>
       </div>
       <div class="col-12 d-flex flex-wrap w-100 justify-content-around mt-4">
