--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
       </div>
       <div class="col-lg-7 col-12 mx-auto text-center text-lg-start mt-3 mt-lg-0">
         <h4 class="text-white fs-4">Chủ đề mùa giải 2024-2025: INTO THE DEEP<sup>SM</sup> bởi RTX</h4>
-        <p class="text-white fs-5">Tại mùa giải <span class="fw-semibold">INTO THE DEEP</span> do Raytheon Technologies (RTX) tài trợ, FIRST Tech Challenge sẽ vén màn sức mạnh của thiết kế, sáng tạo và sự chính xác để tạo ra vô vàn những trải nghiệm mới.</p>
+        <p class="text-white fs-5">Tại mùa giải <span class="fw-semibold">INTO THE DEEP</span> thực hiện bởi Raytheon Technologies (RTX), FIRST Tech Challenge sẽ vén màn sức mạnh của thiết kế, sáng tạo và sự chính xác để tạo ra vô vàn những trải nghiệm mới.</p>
         <a class="btn bg-white p-3 text-primary fw-semibold">Khám phá chủ đề</a>
       </div>
       <div class="col-12 d-flex flex-wrap w-100 justify-content-around mt-4">
