--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="vn">
 
 <head>
   <meta charset="UTF-8">
@@ -19,116 +19,9 @@
 
 <body>
 
-  <!-- Navbar with mega menu -->
-  <div class="navbar navbar-expand-lg fixed-top" style="z-index: 9999; transition: 0.5s;">
-    <div class="container py-3">
-      <a class="navbar-brand" href="#">
-        <img src="assets/images/ftcvn-logo.png" alt="" width="150" height="50" class="d-inline-block align-text-top">
-      </a>
-      <button class="navbar-toggler border-0" type="button">
-        <style>
-          #language-selector .dropdown-toggle::after {
-            content: none;
-          }
-        </style>
-        <div class="nav-item d-inline-block px-2" style="position: initial;">
-          <a class="nav-link text-decoration-none border-0 shadow-none" id="language-selector" onclick="switchWebLanguage()">
-            <span class="fi fi-vn"></span>
-          </a>
-        </div>
-        <span class="bi bi-list fs-1" style="color: #ff8100;" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"></span>
-      </button>
-      <div class="collapse navbar-collapse flex-grow-0" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item d-none d-lg-block">
-            <a class="nav-link text-decoration-none border-0 shadow-none" id="language-selector-main" onclick="switchWebLanguage()">
-              <span class="fi fi-vn"></span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active border-0 shadow-none text-white" aria-current="page" href="/">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link border-0 shadow-none text-white" aria-current="page" href="/">Về <span class="fw-bold fst-italic">FIRST®</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link border-0 shadow-none text-white" aria-current="page" href="/">VORC 2024</a>
-          </li>
-          <li class="nav-item"></li>
-          <a class="nav-link border-0 shadow-none text-white" aria-current="page" href="/">FAQs</span></a>
-          </li>
-          <li class="nav-item dropdown" style="position: initial;">
-            <a class="nav-link dropdown-toggle border-0 shadow-none" style="outline: none; box-shadow: none; color: white;" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Xem thêm
-            </a>
-            <div class="dropdown-menu big-menu w-100 rounded-0 border-0 p-0" style="background-color: #ff8100;">
-              <div class="container pt-4 pb-3">
-                <div class="row row-gap-3">
-                  <div class="col-12 col-lg-4">
-                    <h5 class="text-white">
-                      Về cuộc thi
-                    </h5>
-                    <ul class="list-unstyled">
-                      <li class="li-arrow pb-1" style="color: white;">
-                        <a href="#" class="text-white">FIRST Tech Challenge</a>
-                      </li>
-                      <li class="li-arrow pb-1" style="color: white;">
-                        <a href="#" class="text-white">Vietnam Robotics Challenge (VRC)</a>
-                      </li>
-                      <li class="li-arrow pb-1" style="color: white;">
-                        <a href="#" class="text-white">Tổng hợp tài liệu FTC</a>
-                      </li>
-                      <li class="li-arrow pb-1" style="color: white;">
-                        <a href="#" class="text-white">Supporting Programs</a>
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="col-12 col-lg-4">
-                    <h5 class="text-white">
-                      Thông tin chung
-                    </h5>
-                    <ul class="list-unstyled">
-                      <li class="li-arrow pb-1" style="color: white;">
-                        <a href="#" class="text-white">Tình nguyện viên</a>
-                      </li>
-                      <li class="li-arrow pb-1" style="color: white;">
-                        <a href="#" class="text-white">Mục lục Website</a>
-                      </li>
-                      <li class="li-arrow pb-1" style="color: white;">
-                        <a href="#" class="text-white">Blog <span class="fw-bold fst-italic">FIRST®</span></a>
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="col-12 col-lg-4">
-                    <h5 class="text-white">
-                      Đường dẫn khác
-                    </h5>
-                    <ul class="list-unstyled">
-                      <li class="li-arrow pb-1" style="color: white;">
-                        <a href="#" class="text-white">goBilda</a>
-                      </li>
-                      <li class="li-arrow pb-1" style="color: white;">
-                        <a href="#" class="text-white">AndyMark</a>
-                      </li>
-                      <li class="li-arrow pb-1" style="color: white;">
-                        <a href="#" class="text-white">Servocity</a>
-                      </li>
-                      <li class="li-arrow pb-1" style="color: white;">
-                        <a href="#" class="text-white">PITSCO</a>
-                      </li>
-                      <li class="li-arrow pb-1" style="color: white;">
-                        <a href="#" class="text-white">Chief Delphi</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
+  <!-- Navbar section -->
+  <script type="module" src="/components/navbar.js"></script>
+  <ftcvn-navbar></ftcvn-navbar>
 
   <!--Screen heigh 2-Column Banner section -->
   <section class="w-100 justify-content-center" style="min-height: 80vh; padding-top: 150px; background-color: #025aaa;">
@@ -195,7 +88,7 @@
       </div>
       <div class="col-lg-7 col-12 mx-auto text-center text-lg-start mt-3 mt-lg-0">
         <h4 class="text-white fs-4">Chủ đề mùa giải 2024-2025: INTO THE DEEP<sup>SM</sup> bởi RTX</h4>
-        <p class="text-white fs-5">Tại mùa giải <span class="fw-semibold">INTO THE DEEP</span> thực hiện bởi Raytheon Technologies (RTX), FIRST Tech Challenge sẽ vén màn sức mạnh của thiết kế, sáng tạo và sự chính xác để tạo ra vô vàn những trải nghiệm mới.</p>
+        <p class="text-white fs-5">Tại mùa giải <span class="fw-semibold">INTO THE DEEP</span>, FIRST Tech Challenge sẽ vén màn sức mạnh của thiết kế, sáng tạo và sự chính xác để tạo ra vô vàn những trải nghiệm mới.</p>
         <a class="btn bg-white p-3 text-primary fw-semibold">Khám phá chủ đề</a>
       </div>
       <div class="col-12 d-flex flex-wrap w-100 justify-content-around mt-4">
@@ -285,54 +178,9 @@
       </div>
   </section>
 
-  <!-- Footer section -->
-  <svg id="wave" style="transform:rotate(0deg); transition: 0.3s; margin-bottom: -3px;" viewBox="0 0 1440 120" version="1.1" xmlns="http://www.w3.org/2000/svg">
-    <defs>
-      <linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0">
-        <stop stop-color="rgba(2, 90, 170, 1)" offset="0%"></stop>
-        <stop stop-color="rgba(2, 90, 170, 1)" offset="100%"></stop>
-      </linearGradient>
-    </defs>
-    <path style="transform:translate(0, 0px); opacity:1" fill="url(#sw-gradient-0)" d="M0,48L48,52C96,56,192,64,288,74C384,84,480,96,576,100C672,104,768,100,864,82C960,64,1056,32,1152,32C1248,32,1344,64,1440,68C1536,72,1632,48,1728,34C1824,20,1920,16,2016,18C2112,20,2208,28,2304,34C2400,40,2496,44,2592,52C2688,60,2784,72,2880,64C2976,56,3072,28,3168,26C3264,24,3360,48,3456,50C3552,52,3648,32,3744,24C3840,16,3936,20,4032,20C4128,20,4224,16,4320,14C4416,12,4512,12,4608,26C4704,40,4800,68,4896,80C4992,92,5088,88,5184,82C5280,76,5376,68,5472,56C5568,44,5664,28,5760,22C5856,16,5952,20,6048,36C6144,52,6240,80,6336,84C6432,88,6528,68,6624,60C6720,52,6816,56,6864,58L6912,60L6912,120L6864,120C6816,120,6720,120,6624,120C6528,120,6432,120,6336,120C6240,120,6144,120,6048,120C5952,120,5856,120,5760,120C5664,120,5568,120,5472,120C5376,120,5280,120,5184,120C5088,120,4992,120,4896,120C4800,120,4704,120,4608,120C4512,120,4416,120,4320,120C4224,120,4128,120,4032,120C3936,120,3840,120,3744,120C3648,120,3552,120,3456,120C3360,120,3264,120,3168,120C3072,120,2976,120,2880,120C2784,120,2688,120,2592,120C2496,120,2400,120,2304,120C2208,120,2112,120,2016,120C1920,120,1824,120,1728,120C1632,120,1536,120,1440,120C1344,120,1248,120,1152,120C1056,120,960,120,864,120C768,120,672,120,576,120C480,120,384,120,288,120C192,120,96,120,48,120L0,120Z"></path>
-  </svg>
-  <section class="pt-5" style="background-color: #025aaa;">
-    <div class="container">
-      <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 pb-5 border-bottom">
-        <div class="col mb-3">
-          <a><img src="assets/images/ftcvn-logo.png" alt="" class="img-fluid d-block mx-auto" style="max-height: 70px;"></a>
-        </div>
-        <div class="col mb-3">
-        </div>
-        <div class="col mb-3">
-          <h5 class="text-secondary fw-semibold">FTC VN</h5>
-          <ul class="nav flex-column">
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Về FIRST</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Về FTC Vietnam</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Luật chơi</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Lịch trình</a></li>
-          </ul>
-        </div>
-        <div class="col mb-3">
-          <h5 class="text-secondary fw-semibold">Hỗ trợ</h5>
-          <ul class="nav flex-column">
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Đăng ký</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Vietnam Open Robotics Challenge</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Trang chính thức</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">FAQs</a></li>
-          </ul>
-        </div>
-        <div class="col mb-3">
-          <h5 class="text-secondary fw-semibold">Thông tin</h5>
-          <ul class="nav flex-column">
-            <li class="nav-item mb-2"><a href="mailto:robotics@fe.edu.vn" class="nav-link p-0 text-white">Email: robotics@fe.edu.vn</a></li>
-            <li class="nav-item mb-2"><a class="nav-link p-0 text-white">Phone: 0375156543 (Ms.Trang)</a></li>
-            <li class="nav-item mb-2"><a href="https://maps.app.goo.gl/gGyVR9HWvJCBer5M8" class="nav-link p-0 text-white">Address: Khu GD&ĐT, CNC Hòa Lạc, Km29, Đại lộ Thăng Long, Thạch Thất , Hà Nội, Việt Nam</a></li>
-          </ul>
-        </div>
-      </footer>
-      <p class="text-center text-white m-0 py-3">Copyright ©2024 FPT Edu Experience Space All Rights Reserved</p>
-    </div>
-  </section>
+  <!--Contact section -->
+  <script type="module" src="/components/contact.js"></script>
+  <ftcvn-contact></ftcvn-contact>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script type="text/javascript">
