--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/7.2.3/css/flag-icons.min.css" integrity="sha512-bZBu2H0+FGFz/stDN/L0k8J0G8qVsAL0ht1qg5kTwtAheiXwiRKyCq1frwfbSFSJN3jooR5kauE0YjtPzhZtJQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="assets/css/styles.css">
-  <link rel="stylesheet" href="assets/css/resass.css">
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/FIRSTTech_IconVert_RGB.png">
+  <link rel="stylesheet" href="/assets/css/styles.css">
+  <link rel="stylesheet" href="/assets/css/resass.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/FIRSTTech_IconVert_RGB.png">
   <meta name="description" content=" FIRST Tech Challenge Việt Nam là giải đấu FTC chính thức lần đầu tiên được tổ chức tại Việt Nam theo bản quyền của FIRST tại Hoa Kỳ. FIRST Tech Challenge Việt Nam mong muốn tạo ra một sân chơi về công nghệ nhằm khuyến khích tinh thần học tập, sáng tạo, mối quan tâm về xã hội của học sinh Việt Nam, đồng thời truyền cảm hứng và thúc đẩy học sinh học tập, thực hành, ứng dụng các công nghệ mới, góp phần xây dựng nguồn lực chất lượng cao, đáp ứng nhu cầu của cuộc cách mạng công nghiệp 4.0.">
 </head>
 
@@ -37,11 +37,11 @@
           </p>
           <div class="d-flex flex-column flex-lg-row gap-3">
             <a href="#" class="btn btn-white fw-bold p-3">Tham gia</a>
-            <a href="#" class="btn btn-outline-white fw-semibold p-3">FTC 23-24 Event Recap</a>
+            <a href="/2324/index.html" class="btn btn-outline-white fw-semibold p-3">FTC 23-24 Event Recap</a>
           </div>
         </div>
         <div class="col-12 col-lg-6 align-content-center">
-          <img class="img-fluid p-5" src="assets/images/hero-image.png" alt="">
+          <img class="img-fluid p-5" src="/assets/images/hero-image.png" alt="">
         </div>
       </div>
   </section>
@@ -74,7 +74,7 @@
           </p>
         </div>
         <div class="col-12 col-lg-6 align-content-center">
-          <img class="img-fluid p-5" src="assets/images/robot-1.png" alt="">
+          <img class="img-fluid p-5" src="/assets/images/robot-1.png" alt="">
         </div>
       </div>
     </div>
@@ -181,6 +181,7 @@
   <!--Contact section -->
   <script type="module" src="/components/contact.js"></script>
   <ftcvn-contact></ftcvn-contact>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script type="text/javascript">
@@ -188,7 +189,7 @@
       duration: 800,
     });
   </script>
-  <script src="scripts/script.js"></script>
+  <script src="/scripts/script.js"></script>
 </body>
 
 </html>
