--- a/en/index.html
+++ b/en/index.html
@@ -11,9 +11,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/7.2.3/css/flag-icons.min.css" integrity="sha512-bZBu2H0+FGFz/stDN/L0k8J0G8qVsAL0ht1qg5kTwtAheiXwiRKyCq1frwfbSFSJN3jooR5kauE0YjtPzhZtJQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../assets/css/styles.css">
-  <link rel="stylesheet" href="../assets/css/resass.css">
-  <link rel="icon" type="image/png" sizes="32x32" href="../assets/favicons/FIRSTTech_IconVert_RGB.png">
+  <link rel="stylesheet" href="/assets/css/styles.css">
+  <link rel="stylesheet" href="/assets/css/resass.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/FIRSTTech_IconVert_RGB.png">
   <meta name="description" content="The FIRST Tech Challenge Vietnam is the first official FTC competition organized in Vietnam under the licensing of FIRST in the United States. FIRST Tech Challenge Vietnam aims to create a technology-focused platform to encourage the spirit of learning, creativity, and social engagement among Vietnamese students. At the same time, it seeks to inspire and motivate students to study, practice, and apply new technologies, thereby contributing to the development of a high-quality workforce that meets the demands of the Fourth Industrial Revolution.">
 </head>
 
@@ -35,12 +35,12 @@
             </a>
           </p>
           <div class="d-flex flex-column flex-lg-row gap-3">
-            <a href="#" class="btn btn-white fw-bold p-3">Registration</a>
-            <a href="#" class="btn btn-outline-white fw-semibold p-3">FTC 23-24 Event Recap</a>
+            <a href="#registration-section" class="btn btn-white fw-bold p-3">Registration</a>
+            <a href="/2324/index.html" class="btn btn-outline-white fw-semibold p-3">FTC 23-24 Event Recap</a>
           </div>
         </div>
         <div class="col-12 col-lg-6 align-content-center">
-          <img class="img-fluid p-5" src="../assets/images/hero-image.png" alt="">
+          <img class="img-fluid p-5" src="/assets/images/hero-image.png" alt="">
         </div>
       </div>
   </section>
@@ -73,7 +73,7 @@
           </p>
         </div>
         <div class="col-12 col-lg-6 align-content-center">
-          <img class="img-fluid p-5" src="../assets/images/robot-1.png" alt="">
+          <img class="img-fluid p-5" src="/assets/images/robot-1.png" alt="">
         </div>
       </div>
     </div>
@@ -112,15 +112,15 @@
             <span class="fw-bold">FIRST Tech Challenge Vietnam (FTC VN)</span> is a certified regional championship in Vietnam, where two teams awarded Inspire Award and 1st Place Alliance Captain will advance to the FIRST World Championship.
             <br/>
             <br/>
-            We’re welcoming international teams to join us this year! Especially Southeast Asia, namely: Philippines, Myanmar (Burma), Malaysia, Cambodia, Laos, Singapore, Timor-Leste (East Timor), Brunei Darussalam.
+            We're welcoming international teams to join us this year! Especially Southeast Asia, namely: Philippines, Myanmar (Burma), Malaysia, Cambodia, Laos, Singapore, Timor-Leste (East Timor), Brunei Darussalam.
           </p>
-          <h2>Who can join the championship</h2>
-          <ul>
+          <h2 class="fs-2">Who can join the championship</h2>
+          <ul class="fs-5">
             <li>Rookie (new) teams</li>
             <li>Veteran (returning) teams from FIRST Tech Challenge Vietnam 2023-2024</li>
             <li>International teams, whose region DOES NOT have a regional championship.</li>
           </ul>
-          <p>Note: For International teams whose region DOES have a regional championship, check our FAQs </p>
+          <p class="fs-5">Note: For International teams whose region DOES have a regional championship, check our FAQs </p>
         </div>
         <div class="col-12 col-lg-5 align-content-center">
         </div>
@@ -134,69 +134,123 @@
       <div class="row">
         <div class="col-12 col-lg-12">
           <h1 class="fw-semibold fs-1 mb-3 text-center">
-            <span style="font-weight: 900 !important; font-style: italic;">FIRST®</span> Tech Challenge 2024-2025 Season timeline
+            <span style="font-weight: 900 !important; font-style: italic;">FIRST®</span> Tech Challenge Vietnam 2024-2025 timeline
           </h1>
           <ul class="timeline">
             <li class="timeline-item rounded-5">
               <div class="timeline-content">
                 <p class="mb-1 fs-5">
-                  <span class="fw-bold fs-4">05.2024</span>
+                  <span class="fw-bold fs-4">06.11.2024</span>
                   <br />
-                  Registration Opens
+                  Open Registration, Online Community Platforms & FTC Kickoff Event
                 </p>
               </div>
             </li>
             <li class="timeline-item rounded-5">
               <div class="timeline-content">
                 <p class="mb-1 fs-5">
-                  <span class="fw-bold fs-4">05.2024 - 08.2024</span>
+                  <span class="fw-bold fs-4">1st and 3rd Tuesday every month</span>
                   <br />
-                  Pre-Season
+                  Office Hour with Organizers: Q&A with Organizers
                 </p>
               </div>
             </li>
             <li class="timeline-item rounded-5">
               <div class="timeline-content">
                 <p class="mb-1 fs-5">
-                  <span class="fw-bold fs-4">07.09.2024</span>
+                  <span class="fw-bold fs-4">06.11.2024 - 23.02.2025</span>
                   <br />
-                  Kickoff FIRST Tech Challenge 2024-2025
+                  Community Facebook group + Question Box
                 </p>
               </div>
             </li>
             <li class="timeline-item rounded-5">
               <div class="timeline-content">
                 <p class="mb-1 fs-5">
-                  <span class="fw-bold fs-4">09.2024 - 01.2025</span>
+                  <span class="fw-bold fs-4">18.11.2024 - 23.02.2025</span>
                   <br />
-                  Build and practice Season
+                  AdvisorLink Program — Connecting teams with mentors
                 </p>
               </div>
             </li>
             <li class="timeline-item rounded-5">
               <div class="timeline-content">
                 <p class="mb-1 fs-5">
-                  <span class="fw-bold fs-4">10.2024 - 03.2025</span>
+                  <span class="fw-bold fs-4">TBA</span>
                   <br />
-                  Qualifying Season
+                  FTC Open Training Program & Offline events
                 </p>
               </div>
             </li>
             <li class="timeline-item rounded-5">
               <div class="timeline-content">
                 <p class="mb-1 fs-5">
-                  <span class="fw-bold fs-4">12.2024 - 03.2025</span>
+                  <span class="fw-bold fs-4">01.12.2024</span>
                   <br />
-                  State/Regional Championships
+                  Scrimmage Event
                 </p>
               </div>
             </li>
             <li class="timeline-item rounded-5">
               <div class="timeline-content">
                 <p class="mb-1 fs-5">
-                  <span class="fw-bold fs-4">04.2025</span>
+                  <span class="fw-bold fs-4">25.12.2024</span>
                   <br />
-                  World Championships
+                  Close Financial Aid application
+                </p>
+              </div>
+            </li>
+            <li class="timeline-item rounded-5">
+              <div class="timeline-content">
+                <p class="mb-1 fs-5">
+                  <span class="fw-bold fs-4">01.01.2025</span>
+                  <br />
+                  Close Registration
+                </p>
+              </div>
+            </li>
+            <li class="timeline-item rounded-5">
+              <div class="timeline-content">
+                <p class="mb-1 fs-5">
+                  <span class="fw-bold fs-4">03.01.2025</span>
+                  <br />
+                  Announce qualifying tournament details
+                </p>
+              </div>
+            </li>
+            <li class="timeline-item rounded-5">
+              <div class="timeline-content">
+                <p class="mb-1 fs-5">
+                  <span class="fw-bold fs-4">11.01.2025</span>
+                  <br />
+                  (Tentative Qualifying Tournament hosted in Thanh Hóa)
+                </p>
+              </div>
+            </li>
+            <li class="timeline-item rounded-5">
+              <div class="timeline-content">
+                <p class="mb-1 fs-5">
+                  <span class="fw-bold fs-4">05.02.2025</span>
+                  <br />
+                  Announce Championship Event agenda
+                </p>
+              </div>
+            </li>
+            <li class="timeline-item rounded-5">
+              <div class="timeline-content">
+                <p class="mb-1 fs-5">
+                  <span class="fw-bold fs-4">05.02.2025</span>
+                  <br />
+                  (Tentative Qualifying Tournament hosted in Hanoi)
+                </p>
+              </div>
+            </li>
+            <li class="timeline-item rounded-5">
+              <div class="timeline-content">
+                <p class="mb-1 fs-5">
+                  <span class="fw-bold fs-4">23.02.2025</span>
+                  <br />
+                  Regional Championship Event
                 </p>
               </div>
             </li>
@@ -205,54 +259,49 @@
       </div>
   </section>
 
-  <!-- Footer section -->
-  <svg id="wave" style="transform:rotate(0deg); transition: 0.3s; margin-bottom: -3px;" viewBox="0 0 1440 120" version="1.1" xmlns="http://www.w3.org/2000/svg">
-    <defs>
-      <linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0">
-        <stop stop-color="rgba(2, 90, 170, 1)" offset="0%"></stop>
-        <stop stop-color="rgba(2, 90, 170, 1)" offset="100%"></stop>
-      </linearGradient>
-    </defs>
-    <path style="transform:translate(0, 0px); opacity:1" fill="url(#sw-gradient-0)" d="M0,48L48,52C96,56,192,64,288,74C384,84,480,96,576,100C672,104,768,100,864,82C960,64,1056,32,1152,32C1248,32,1344,64,1440,68C1536,72,1632,48,1728,34C1824,20,1920,16,2016,18C2112,20,2208,28,2304,34C2400,40,2496,44,2592,52C2688,60,2784,72,2880,64C2976,56,3072,28,3168,26C3264,24,3360,48,3456,50C3552,52,3648,32,3744,24C3840,16,3936,20,4032,20C4128,20,4224,16,4320,14C4416,12,4512,12,4608,26C4704,40,4800,68,4896,80C4992,92,5088,88,5184,82C5280,76,5376,68,5472,56C5568,44,5664,28,5760,22C5856,16,5952,20,6048,36C6144,52,6240,80,6336,84C6432,88,6528,68,6624,60C6720,52,6816,56,6864,58L6912,60L6912,120L6864,120C6816,120,6720,120,6624,120C6528,120,6432,120,6336,120C6240,120,6144,120,6048,120C5952,120,5856,120,5760,120C5664,120,5568,120,5472,120C5376,120,5280,120,5184,120C5088,120,4992,120,4896,120C4800,120,4704,120,4608,120C4512,120,4416,120,4320,120C4224,120,4128,120,4032,120C3936,120,3840,120,3744,120C3648,120,3552,120,3456,120C3360,120,3264,120,3168,120C3072,120,2976,120,2880,120C2784,120,2688,120,2592,120C2496,120,2400,120,2304,120C2208,120,2112,120,2016,120C1920,120,1824,120,1728,120C1632,120,1536,120,1440,120C1344,120,1248,120,1152,120C1056,120,960,120,864,120C768,120,672,120,576,120C480,120,384,120,288,120C192,120,96,120,48,120L0,120Z"></path>
-  </svg>
-  <section class="pt-5" style="background-color: #025aaa;">
-    <div class="container">
-      <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 pb-5 border-bottom">
-        <div class="col mb-3">
-          <a><img src="../assets/images/ftcvn-logo.png" alt="" class="img-fluid d-block mx-auto" style="max-height: 70px;"></a>
-        </div>
-        <div class="col mb-3">
-        </div>
-        <div class="col mb-3">
-          <h5 class="text-secondary fw-semibold">FTC VN</h5>
-          <ul class="nav flex-column">
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">FIRST</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">FTC Vietnam</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Rules</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Timeline</a></li>
-          </ul>
-        </div>
-        <div class="col mb-3">
-          <h5 class="text-secondary fw-semibold">Support</h5>
-          <ul class="nav flex-column">
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Registration</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Vietnam Open Robotics Challenge</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">FTC Official page</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">FAQs</a></li>
-          </ul>
-        </div>
-        <div class="col mb-3">
-          <h5 class="text-secondary fw-semibold">Information</h5>
-          <ul class="nav flex-column">
-            <li class="nav-item mb-2"><a href="mailto:robotics@fe.edu.vn" class="nav-link p-0 text-white">Email: robotics@fe.edu.vn</a></li>
-            <li class="nav-item mb-2"><a class="nav-link p-0 text-white">Phone: 0375156543 (Ms.Trang)</a></li>
-            <li class="nav-item mb-2"><a href="https://maps.app.goo.gl/gGyVR9HWvJCBer5M8" class="nav-link p-0 text-white">Address: Hoa Lac Hi-tech Park, km 29, Đại lộ Thăng Long, Hà Nội, Vietnam</a></li>
-          </ul>
-        </div>
-      </footer>
-      <p class="text-center text-white m-0 py-3">Copyright ©2024 FPT Edu Experience Space All Rights Reserved</p>
+  <!-- Registration section -->
+  <section class="pt-5 pb-3" id="registration-section">
+    <div class="container mx-auto row">
+      <div class="col-12 col-lg-6 align-content-center">
+        <img class="img-fluid p-5" src="/assets/images/585x660-3.png" alt="">
+      </div>
+      <div class="col-12 col-lg-6 align-content-center">
+        <h1 class="fw-bold fs-1 mb-3 text-primary">
+          Registration process
+        </h1>
+        <ul>
+          <li>
+            <p class="fs-5">
+              <span class="fw-bold text-primary">STEP 0: Learn how to form a FIRST Tech Challenge team <a href="https://www.firstinspires.org/robotics/ftc/start-a-team" target="_blank">(Link)</a></span>
+            </p>
+          </li>
+          <li>
+            <p class="fs-5">
+              <span class="fw-bold text-primary">STEP 1: Register your team on the FIRST Tech Challenge website</span>
+              <br>
+              Register on the official FIRST Dashboard to get your official, permanent team number
+              <br>
+              (Tiếng Việt) Hướng dẫn đăng kí đội thi: <a href="https://docs.google.com/document/d/1NEyoeexW45jbZ-wqfB8yIx8wjfYlWC0k4MZOMdXlHLQ/edit?usp=sharing>">Link</a>
+            </p>
+          </li>
+          <li>
+            <p class="fs-5">
+              <span class="fw-bold text-primary">STEP 2: Register on the FIRST Tech Challenge Vietnam website</span> 
+              <br>
+              (Application opens on November 11, 2024)
+              <br>
+              Registration fee: $205 USD (5,000,000 VNĐ) for all teams - Financial Aid available  (Due: EOD 25/12/2024, UTC+7)
+            </p>
+          </li>
+        </ul>
+      </div>
     </div>
   </section>
+
+  <!--Contact section -->
+  <script type="module" src="/components/contact.js"></script>
+  <ftcvn-contact></ftcvn-contact>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script type="text/javascript">
