fix lang switcher on mobile view

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <img src="https://www.firstinspires.org/sites/default/files/2024-banner/ftc_into_the_deep.gif" alt="" class="img-fluid d-block mx-auto" style="object-fit: contain; height: 100%;">
       </div>
       <div class="col-lg-7 col-12 mx-auto text-center text-lg-start mt-3 mt-lg-0">
-        <h4 class="text-white fs-4">Chủ đề mùa giải 2024-2025: INTO THE DEEP<sup>SM</sup> bởi RTX</h4>
+        <h4 class="text-white fs-4">Chủ đề mùa giải 2024-2025: INTO THE DEEP<sup>SM</sup></h4>
         <p class="text-white fs-5">Tại mùa giải <span class="fw-semibold">INTO THE DEEP</span>, FIRST Tech Challenge sẽ vén màn sức mạnh của thiết kế, sáng tạo và sự chính xác để tạo ra vô vàn những trải nghiệm mới.</p>
         <a class="btn bg-white p-3 text-primary fw-semibold">Khám phá chủ đề</a>
       </div>
