--- a/en/index.html
+++ b/en/index.html
@@ -86,7 +86,7 @@
         <img src="https://www.firstinspires.org/sites/default/files/2024-banner/ftc_into_the_deep.gif" alt="" class="img-fluid d-block mx-auto" style="object-fit: contain; height: 100%;">
       </div>
       <div class="col-lg-7 col-12 mx-auto text-center text-lg-start mt-3 mt-lg-0">
-        <h4 class="text-white fs-4">2024-2025 Seasn theme: INTO THE DEEP<sup>SM</sup> by RTX</h4>
+        <h4 class="text-white fs-4">2024-2025 Seasn theme: INTO THE DEEP<sup>SM</sup>/h4>
         <p class="text-white fs-5">In the <span class="fw-semibold">INTO THE DEEP</span> season, the FIRST Tech Challenge will unveil the power of design, creativity, and precision to create countless new experiences.</p>
         <a class="btn bg-white p-3 text-primary fw-semibold">Explore</a>
       </div>
@@ -287,10 +287,13 @@
           <li>
             <p class="fs-5">
               <span class="fw-bold text-primary">STEP 2: Register on the FIRST Tech Challenge Vietnam website</span> 
-              <br>
+              <br/>
               (Application opens on November 11, 2024)
-              <br>
+              <br/>
               Registration fee: $205 USD (5,000,000 VNĐ) for all teams - Financial Aid available  (Due: EOD 25/12/2024, UTC+7)
+              <br/>
+              <br/>
+              Additional information <a href="https://docs.google.com/document/d/12c2ckB0V7d0L8YEElhXi1yQOYbbpp07oBRTdZ1FERxA/edit?usp=sharing">here</a>
             </p>
           </li>
         </ul>
