--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </a>
           </p>
           <div class="d-flex flex-column flex-lg-row gap-3">
-            <a href="#" class="btn btn-white fw-bold p-3">Tham gia</a>
+            <a href="#registration-section" class="btn btn-white fw-bold p-3">Tham gia</a>
             <a href="/2324/index.html" class="btn btn-outline-white fw-semibold p-3">FTC 23-24 Event Recap</a>
           </div>
         </div>
@@ -64,13 +64,13 @@
             <span class="fw-bold" style="color: #025aaa;"><span class="fw-bolder fst-italic">FIRST®</span> Tech Challenge</span> là gì?
           </h1>
           <p class="fs-5">
-            <span class="fw-bold">FIRST Tech Challenge</span> không chỉ đơn giản là chế tạo robot. Các đội thi (tối đa 15 thành viên trong nhóm, lớp 7-12) tham gia thử thách để thiết kế, xây dựng, lập trình và vận hành robot để thi đấu với nhau theo liên minh. Bộ kit robot có thể dùng từ năm này sang năm khác và có thể được lập trình bằng nhiều cấp độ khác nhau của ngôn ngữ Java. Ngoài việc thiết kế và chế tạo robot, các đội còn tham gia gây quỹ, thiết kế thương hiệu, truyền thông, và tiếp cận cộng đồng để đạt được các giải thưởng khác nhau.
-            <br />
-            <br />
-            Được hướng dẫn bởi các huấn luyện viên và cố vấn, các bạn học sinh có thể phát triển các kỹ năng STEM và thực hành các nguyên tắc thiết kế cơ khí, đồng thời thực hành những giá trị như sự chăm chỉ, đổi mới sáng tạo, và làm việc nhóm. Với <span class="fw-semibold" style="color: #025aaa;">Gracious Professionalism® (Sự Chuyên nghiệp Tử tế),</span> các bạn học sinh được khuyến khích tạo ra bản sắc của đội mình và trở thành đại sứ cho FIRST và STEM trong cộng đồng của chính các bạn.
-            <br />
-            <br />
-            Mỗi mùa giải sẽ kết thúc với các giải đấu khu vực và giải vô địch FIRST tại Mỹ.
+            <span class="fw-bold">FIRST Tech Challenge</span> không chỉ là chế tạo robot. Các đội FIRST Tech Challenge (mình đa 15 thành viên trong nhóm, từ lớp 7 đến lớp 12) được thử thách để thiết kế, chế tạo, lập trình và vận hành robot để cạnh tranh với hình thức đối đầu trực tiếp theo liên minh.
+            <br/>
+            <br/>
+            Dưới sự hướng dẫn của các huấn luyện viên và cố vấn, các bạn học sinh sẽ được phát triển kỹ năng STEM và vận dụng các nguyên lý kỹ thuật, đồng thời trải nghiệm thành quả của sự chăm chỉ, sáng tạo và tinh thần làm việc nhóm.
+            <br/>
+            <br/>
+            Bộ kit robot có thể tái sử dụng từ năm này sang năm khác và có thể được lập trình với nhiều cấp độ dựa trên Java. Các đội sẽ thiết kế và chế tạo robot, gây quỹ, thiết kế và truyền thông thương hiệu đội của mình đồng thời thực hiện các hoạt động cộng đồng để đạt được các giải thưởng đặc biệt. Các thí sinh tham gia cũng có thể tiếp cậncác học bổng đại học với tổng giá trị trên 80 triệu đô la Mỹ.
           </p>
         </div>
         <div class="col-12 col-lg-6 align-content-center">
@@ -101,81 +101,203 @@
     </div>
   </section>
 
+  <!-- Content-image section -->
+  <section class="pt-5 pb-3 w-100" style="background: url(/assets/media/event-day.jpg) no-repeat; background-position: right 30%; min-height: 700px;">
+    <div class="container mx-auto">
+      <div class="row w-100 mx-auto">
+        <div class="col-12 col-lg-7 align-content-center bg-white pt-5 pb-3 px-3 rounded">
+          <h1 class="fw-semibold fs-1 mb-3">
+            Về <span class="fw-bold" style="color: #025aaa;"><span class="fw-bolder fst-italic">FIRST®</span> Tech Challenge Vietnam 2024 - 2025</span>
+          </h1>
+          <p class="fs-5">
+            <span class="fw-bold">FIRST Tech Challenge Vietnam (FTC VN)</span> là một giải vô địch khu vực được chứng nhận tại Việt Nam, nơi hai đội được trao Inspire Award và 1st Place Alliance Captain sẽ tiến mình đến FIRST World Championship.
+            <br/>
+            <br/>
+            <span class="fw-bold">Chúng mình cũng chào đón các đội quốc tế tham gia trong năm nay!</span> Đặc biệt là các quốc gia Đông Nam Á: Philippines, Myanmar, Malaysia, Campuchia, Lào, Singapore, Đông Timor, và Brunei Darussalam.
+          </p>
+          <h2 class="fs-2">Đối tượng tham dự giải đấu</h2>
+          <ul class="fs-5">
+            <li>Đội tân binh (mới)</li>
+            <li>Đội kỳ cựu (trở lại giải đấu từ FIRST Tech Challenge Vietnam 2023-2024)</li>
+            <li>Đội quốc tế, khu vực KHÔNG có giải vô địch khu vực.</li>
+          </ul>
+          <p class="fs-5">Đối với các đội quốc tế CÓ giải vô địch khu vực, xem thêm FAQs</p>
+        </div>
+        <div class="col-12 col-lg-5 align-content-center">
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Timeline section -->
-  <section class="pt-5 pb-3">
+  <section class="pt-5 pb-3" id="timeline-section">
     <div class="container">
       <div class="row">
         <div class="col-12 col-lg-12">
           <h1 class="fw-semibold fs-1 mb-3 text-center">
-            Mốc thời gian mùa giải <span style="font-weight: 900 !important; font-style: italic;">FIRST®</span> Tech Challenge 2024-2025
+            Các mốc thời gian<span style="font-weight: 900 !important; font-style: italic;">FIRST®</span> Tech Challenge Vietnam 2024-2025
           </h1>
           <ul class="timeline">
             <li class="timeline-item rounded-5">
               <div class="timeline-content">
                 <p class="mb-1 fs-5">
-                  <span class="fw-bold fs-4">05.2024</span>
+                  <span class="fw-bold fs-4">06.11.2024</span>
                   <br />
-                  Registration Opens
+                  Mở đơn đăng ký, Nền tảng cộng đồng trực tuyến & Sự kiện khởi động FTC
                 </p>
               </div>
             </li>
             <li class="timeline-item rounded-5">
               <div class="timeline-content">
                 <p class="mb-1 fs-5">
-                  <span class="fw-bold fs-4">05.2024 - 08.2024</span>
+                  <span class="fw-bold fs-4">Ngày thứ 3 tuần lễ đầu tiên và tuần lễ thứ ba của mỗi tháng</span>
                   <br />
-                  Pre-Season
+                  Hỏi đáp cùng Ban tổ chức
                 </p>
               </div>
             </li>
             <li class="timeline-item rounded-5">
               <div class="timeline-content">
                 <p class="mb-1 fs-5">
-                  <span class="fw-bold fs-4">07.09.2024</span>
+                  <span class="fw-bold fs-4">06.11.2024 - 23.02.2025</span>
                   <br />
-                  Kickoff FIRST Tech Challenge 2024-2025
+                  Nhóm Facebook cộng đồng và Hộp Câu hỏi
                 </p>
               </div>
             </li>
             <li class="timeline-item rounded-5">
               <div class="timeline-content">
                 <p class="mb-1 fs-5">
-                  <span class="fw-bold fs-4">09.2024 - 01.2025</span>
+                  <span class="fw-bold fs-4">18.11.2024 - 23.02.2025</span>
                   <br />
-                  Build and practice Season
+                  Chương trình AdvisorLink — Kết nối các đội với cố vấn
                 </p>
               </div>
             </li>
             <li class="timeline-item rounded-5">
               <div class="timeline-content">
                 <p class="mb-1 fs-5">
-                  <span class="fw-bold fs-4">10.2024 - 03.2025</span>
+                  <span class="fw-bold fs-4">TBA</span>
                   <br />
-                  Qualifying Season
+                  Chương trình Open Training & Offline events
                 </p>
               </div>
             </li>
             <li class="timeline-item rounded-5">
               <div class="timeline-content">
                 <p class="mb-1 fs-5">
-                  <span class="fw-bold fs-4">12.2024 - 03.2025</span>
+                  <span class="fw-bold fs-4">01.12.2024</span>
                   <br />
-                  State/Regional Championships
+                  Sự kiện đấu giao hữu
                 </p>
               </div>
             </li>
             <li class="timeline-item rounded-5">
               <div class="timeline-content">
                 <p class="mb-1 fs-5">
-                  <span class="fw-bold fs-4">04.2025</span>
+                  <span class="fw-bold fs-4">25.12.2024</span>
                   <br />
-                  World Championships
+                  Đóng đơn xin hỗ trợ tài chính
+                </p>
+              </div>
+            </li>
+            <li class="timeline-item rounded-5">
+              <div class="timeline-content">
+                <p class="mb-1 fs-5">
+                  <span class="fw-bold fs-4">01.01.2025</span>
+                  <br />
+                  Đóng đơn đăng ký
+                </p>
+              </div>
+            </li>
+            <li class="timeline-item rounded-5">
+              <div class="timeline-content">
+                <p class="mb-1 fs-5">
+                  <span class="fw-bold fs-4">03.01.2025</span>
+                  <br />
+                  Công bố thông tin chi tiết về giải đấu vòng loại
+                </p>
+              </div>
+            </li>
+            <li class="timeline-item rounded-5">
+              <div class="timeline-content">
+                <p class="mb-1 fs-5">
+                  <span class="fw-bold fs-4">11.01.2025</span>
+                  <br />
+                  (Giải đấu vòng loại dự kiến ​​được tổ chức tại Thanh Hóa)
+                </p>
+              </div>
+            </li>
+            <li class="timeline-item rounded-5">
+              <div class="timeline-content">
+                <p class="mb-1 fs-5">
+                  <span class="fw-bold fs-4">05.02.2025</span>
+                  <br />
+                  Công bố lịch chương trình của Giải vô địch
+                </p>
+              </div>
+            </li>
+            <li class="timeline-item rounded-5">
+              <div class="timeline-content">
+                <p class="mb-1 fs-5">
+                  <span class="fw-bold fs-4">05.02.2025</span>
+                  <br />
+                  (Giải đấu vòng loại dự kiến ​​được tổ chức tại Hà Nội)
+                </p>
+              </div>
+            </li>
+            <li class="timeline-item rounded-5">
+              <div class="timeline-content">
+                <p class="mb-1 fs-5">
+                  <span class="fw-bold fs-4">23.02.2025</span>
+                  <br />
+                  Sự kiện Vô địch Khu vực
                 </p>
               </div>
             </li>
           </ul>
         </div>
       </div>
+  </section>
+
+  <!-- Registration section -->
+  <section class="pt-5 pb-3" id="registration-section">
+    <div class="container mx-auto row">
+      <div class="col-12 col-lg-6 align-content-center">
+        <img class="img-fluid p-5" src="/assets/images/585x660-3.png" alt="">
+      </div>
+      <div class="col-12 col-lg-6 align-content-center">
+        <h1 class="fw-bold fs-1 mb-3 text-primary">
+          Quy trình đăng ký
+        </h1>
+        <ul>
+          <li>
+            <p class="fs-5">
+              <span class="fw-bold text-primary">BƯỚC 0: Tìm hiểu cách thành lập đội FIRST Tech Challenge <a class="fw-normal" href="https://www.firstinspires.org/robotics/ftc/start-a-team" target="_blank">(tại đây)</a></span>
+            </p>
+          </li>
+          <li>
+            <p class="fs-5">
+              <span class="fw-bold text-primary">BƯỚC 1: Đăng ký đội của bạn trên trang web FIRST Tech Challenge</span>
+              <br>
+              Đăng ký trên <a href="https://my.firstinspires.org/AccountManager/Account/Register">FIRST Dashboard</a> chính thức để nhận số đội chính thức, cố định của bạn
+              <br>
+              (Tiếng Việt) Hướng dẫn đăng kí đội thi: <a href="https://docs.google.com/document/d/1NEyoeexW45jbZ-wqfB8yIx8wjfYlWC0k4MZOMdXlHLQ/edit?usp=sharing>">Link</a>
+            </p>
+          </li>
+          <li>
+            <p class="fs-5">
+              <span class="fw-bold text-primary">BƯỚC 2: Đăng ký trên trang web FIRST Tech Challenge Việt Nam</span> 
+              <br/>
+              Phí đăng ký: 200 USD (5.000.000 VNĐ) cho tất cả các đội - Đơn xin hỗ trợ tài chính (Hạn chót: EOD 25/12/2024, UTC+7)
+              <br/>
+              <br/>
+              Thông tin chi tiết <a href="https://docs.google.com/document/d/1LH2hvxmTt6UgNR1JF20OHU1V3pIFta6qa07BxaEhkBk/edit?usp=sharing">tại đây</a>
+            </p>
+          </li>
+        </ul>
+      </div>
+    </div>
   </section>
 
   <!--Contact section -->
