--- a/en/index.html
+++ b/en/index.html
@@ -63,7 +63,7 @@
             What is <span class="fw-bold" style="color: #025aaa;"><span class="fw-bolder fst-italic">FIRST®</span> Tech Challenge?</span>
           </h1>
           <p class="fs-5">
-            <span class="fw-bold"></span>FIRST® Tech Challenge (FTC) is way more than building robots. FIRST Tech Challenge teams (up to 15 team members, grades 7-12) are challenged to design, build, program, and operate robots to compete in a head-to-head challenge in an alliance format.
+            <span class="fw-bold"></span>FIRST® Tech Challenge (FTC) is <span class="fw-bold fst-italic">way</span> more than building robots. FIRST Tech Challenge teams (up to 15 team members, grades 7-12) are challenged to design, build, program, and operate robots to compete in a head-to-head challenge in an alliance format.
             <br />
             <br />
             Guided by adult coaches and mentors, students develop STEM skills and practice engineering principles, while realizing the value of hard work, innovation, and working as a team.
